Fix issue with loading indicator alignment.

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   width: 100%;
 
   .loading-mask {
